--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>at.cgsit.three</groupId>
     <artifactId>simpletest</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.00</version>
     <packaging>jar</packaging>
 
     <name>Simple Test</name>
@@ -37,7 +35,7 @@
         <url>https://github.com/CGS-IT-Solutions/kurs_0410_003</url>
         <connection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_003</connection>
         <developerConnection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_003</developerConnection>
-        <tag>test</tag>
+        <tag>release_1_0_0</tag>
     </scm>
 
     <distributionManagement>
