--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>at.cgsit.three</groupId>
     <artifactId>simpletest</artifactId>
-    <version>1.00</version>
+    <version>1.10-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Simple Test</name>
@@ -35,7 +35,7 @@
         <url>https://github.com/CGS-IT-Solutions/kurs_0410_003</url>
         <connection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_003</connection>
         <developerConnection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_003</developerConnection>
-        <tag>release_1_0_0</tag>
+        <tag>test</tag>
     </scm>
 
     <distributionManagement>
